<resources>
    <string name="app_name">Waritex</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Tabs titles -->
    <string name="products_tab_title">Products</string>
    <string name="active_promotions_tab_title">Promotions</string>
    <string name="expired_promotions_tab_title">Expired Promotions</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_label">About</string>
    <string name="valid_promotion_statment">Valid till: </string>
    <string name="about_waritex">About Waritex</string>
    <string name="company_default_description">Description</string>
    <string name="company_telephone">Telephone:</string>
    <string name="company_fax">Fax:</string>
    <string name="app_settings">Application Settings</string>
    <string name="app_notifications">Allow Notifications</string>
    <string name="app_rating">Rate our application</string>
    <string name="app_share">Share App with friends</string>
    <string name="follow_us">Follow us:</string>
    <string name="app_version">Waritex Version 1.0</string>
    <string name="badeeb_company">Developed by Badeeb LLC</string>
    <string name="show_vendors_bttn">Show Vendors</string>
    <string name="show_map_bttn">Show Map</string>
    <string name="internet_service_message">Internet service isn\'t available</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="notification_title" translatable="false">Waritex</string>
    <string name="share_app_descrption">Waritex Company</string>
    <string name="notification_date">Notification Date: </string>
    <string name="server_error">Server cannot be reached, Please try later</string>
    <string name="app_language">English Language</string>
    <string name="enable_phone_call">Enable phone call permission</string>
    <string name="number_copied">The whatsapp number has been copied</string>
    <string name="no_vendor_found">This promotion does not have vendors</string>
    <string name="expired_date_text">Expired scince:</string>
    <string name="deny_phone_permission">You must allow phone permission to call vendors</string>
</resources>
