<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/RedBackground"
            android:orientation="horizontal"
            android:layoutDirection="ltr">



            <ImageView
                android:id="@+id/company_logo"
                android:layout_width="@dimen/company_info_image_size"
                android:layout_height="@dimen/company_info_image_size"
                android:layout_weight="1"
                android:padding="@dimen/padding"
                android:src="@drawable/waritex_white_logo_256" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/company_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/padding"
                android:text="@string/about_waritex"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/company_about_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/company_info_margin"
                android:background="@color/white"
                android:padding="@dimen/padding"
                style="@style/sub_text"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/company_info_margin"
                    android:background="@color/white"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_weight="0.25"
                        android:gravity="start"
                        android:text="@string/company_telephone"
                        style="@style/dark_text"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/company_telephone"
                        android:layout_weight="0.75"
                        android:gravity="start"
                        style="@style/sub_text"
                        />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/company_info_margin"
                    android:background="@color/white"
                    android:padding="@dimen/padding">

                    <TextView
                        android:layout_weight="0.25"
                        android:gravity="start"
                        android:text="@string/company_fax"
                        style="@style/dark_text"
                        />

                    <TextView
                        android:id="@+id/company_fax"
                        android:layout_weight="0.75"
                        android:gravity="start"
                        style="@style/sub_text"
                        />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/app_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/app_settings"
                style="@style/dark_text"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/company_info_margin"
                android:background="@color/white"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/app_notifications"
                    style="@style/sub_text"
                    />

                <Switch
                    android:id="@+id/app_notification_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/company_info_margin"
                android:background="@color/white"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/app_language"
                    style="@style/sub_text"
                    />

                <Switch
                    android:id="@+id/app_language_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:checked="false"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/company_info_margin"
                >
                <TextView
                    android:id="@+id/app_rate_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/app_rating"
                    style="@style/sub_text"
                    />

                <ImageView
                    android:id="@+id/app_rate_img"
                    android:layout_width="@dimen/company_info_small_image_size"
                    android:layout_height="@dimen/company_info_small_image_size"
                    android:src="@drawable/icon_rate_us"
                    android:padding="@dimen/padding"
                    android:layout_marginRight="@dimen/company_info_icon_margin"
                    android:layout_marginLeft="@dimen/company_info_icon_margin"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/company_info_margin"
                >
                <TextView
                    android:id="@+id/app_url_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/company_info_margin"
                    android:padding="@dimen/padding"
                    android:text="@string/app_share"
                    style="@style/sub_text"
                    />

                <ImageView
                    android:id="@+id/app_url_share_img"
                    android:layout_width="@dimen/company_info_small_image_size"
                    android:layout_height="@dimen/company_info_small_image_size"
                    android:src="@drawable/icon_share"
                    android:padding="@dimen/padding"
                    android:layout_marginRight="@dimen/company_info_icon_margin"
                    android:layout_marginLeft="@dimen/company_info_icon_margin"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/follow_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/follow_us"
            style="@style/dark_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/company_info_rounded_box_margin"
            android:layout_marginRight="@dimen/company_info_rounded_box_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner"
                android:layout_marginBottom="@dimen/company_info_margin"
                android:layoutDirection="ltr"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/globe"
                    android:padding="@dimen/sub_padding"
                    />
                <TextView
                    android:id="@+id/app_website_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:padding="@dimen/padding"
                    style="@style/sub_text"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner"
                android:layout_marginBottom="@dimen/company_info_margin"
                android:layoutDirection="ltr"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook"
                    android:padding="@dimen/sub_padding"
                    />
                <TextView
                    android:id="@+id/app_facebook_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding"
                    style="@style/sub_text"
                    />
            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:background="@drawable/rounded_corner"-->
                <!--android:layout_marginBottom="@dimen/company_info_margin"-->
                <!--android:layoutDirection="ltr"-->
                <!--&gt;-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/jumia_logo_36"-->
                    <!--android:padding="@dimen/sub_padding"-->
                    <!--/>-->
                <!--<TextView-->
                    <!--android:id="@+id/app_jumia_url"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:padding="@dimen/padding"-->
                    <!--style="@style/sub_text"-->
                    <!--/>-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:background="@drawable/rounded_corner"-->
                <!--android:layout_marginBottom="@dimen/company_info_margin"-->
                <!--android:layoutDirection="ltr"-->
                <!--&gt;-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/souq_logo_36"-->
                    <!--android:padding="@dimen/sub_padding"-->
                    <!--/>-->
                <!--<TextView-->
                    <!--android:id="@+id/app_souq_url"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:padding="@dimen/padding"-->
                    <!--style="@style/sub_text"-->
                    <!--/>-->
            <!--</LinearLayout>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner"
                android:layout_marginBottom="@dimen/company_info_margin"
                android:layoutDirection="ltr"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/whatsapp"
                    android:padding="@dimen/sub_padding"
                    />
                <TextView
                    android:id="@+id/app_whatsApp_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding"
                    style="@style/sub_text"
                    />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/company_info_margin"
            android:padding="@dimen/padding"
            android:gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <ImageView
                android:id="@+id/badeeb_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/badeeb_logo"
                android:padding="@dimen/sub_padding"

                android:layout_alignParentLeft="true"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/badeeb_company"
                android:textStyle="bold"
                android:padding="@dimen/padding"
                />
        </RelativeLayout>

    </LinearLayout>


</ScrollView>